--- a/_scss/parts/_responsive.scss
+++ b/_scss/parts/_responsive.scss
@@ -51,6 +51,7 @@
     img {
       max-width: 179px;
       margin: auto;
+      transform: translateX(14px);
     }
   }
   @-webkit-keyframes bounce {
@@ -109,7 +110,7 @@
     position: absolute;
     display: block;
     top: 13px;
-    right: 0;
+    right: 20px;
     width: 43px;
     height: 43px;
     overflow: hidden;
@@ -192,7 +193,7 @@
       height: 90px;
     }
     &:before {
-      left: -23px;
+      left: -22px;
     }
     h2 {
       font-size: 2rem;
@@ -250,6 +251,11 @@
       }
     }
   }
+  .topnav {
+    .container-fluid {
+      padding: 0 20px;
+    }
+  }
 }
 
 
@@ -294,9 +300,6 @@
     p {
       font-size: 17px;
     }
-  }
-  button#toggle-menu {
-    right: 20px;
   }
 }
 
